dark mode fixes

--- a/src/react_app/src/DarkModeButton/DarkModeButton.css
+++ b/src/react_app/src/DarkModeButton/DarkModeButton.css
@@ -1,7 +1,7 @@
 .DarkModeButton {
   position: fixed;
   bottom: 20px;
-  right: 20px;
+  left: 20px;
   z-index: 9999;
   width: 48px;
   height: 48px;
