--- a/src/react_app/src/NewMailWindow/NewMailWindow.css
+++ b/src/react_app/src/NewMailWindow/NewMailWindow.css
@@ -1,7 +1,6 @@
 .mail-popup {
   position: fixed;
   bottom: 20px;
-  right: 20px;
   width: 600px;
   background: #fff;
   border-radius: 8px;
@@ -72,4 +71,43 @@
 
 .icon-bar i:hover {
   color: #202124;
+}
+
+[data-bs-theme="dark"] .mail-popup {
+  background: #1e1e1e;
+  color: #e4e4e4;
+}
+
+[data-bs-theme="dark"] .mail-header {
+  background-color: #2c2c2c;
+  border-bottom: 1px solid #444;
+}
+
+[data-bs-theme="dark"] .form-control {
+  border-bottom: 1px solid #555;
+  color: #e4e4e4;
+}
+
+[data-bs-theme="dark"] .form-control::placeholder {
+  color: #aaa;
+}
+
+[data-bs-theme="dark"] .mail-form textarea.form-control {
+  border-bottom: 1px solid #555;
+}
+
+[data-bs-theme="dark"] .btn-send {
+  background-color: #3c74d2;
+}
+
+[data-bs-theme="dark"] .btn-send:hover {
+  background-color: #2f5cb1;
+}
+
+[data-bs-theme="dark"] .icon-bar i {
+  color: #aaa;
+}
+
+[data-bs-theme="dark"] .icon-bar i:hover {
+  color: #fff;
 }
